--- a/pervane/templates/index_vue.html
+++ b/pervane/templates/index_vue.html
@@ -157,11 +157,6 @@
   </nav>
 </header>
 
-<a href="#" alt="Toggle sidebar" @click="showSidebar = !showSidebar"
-   style="font-size: 20px; font-style: bold;">
-  <span v-if="showSidebar">«</span>
-  <span v-else>»</span>
-</a>
 
 <div class="row">
   <div class="col-sm-2 sidebar" v-if="showSidebar" 
@@ -173,6 +168,8 @@
               placeholder="Quick search (alt + g)" @input="doQuickSearch"
               v-model="quickSearchQuery" />
       </span>
+      <br>
+
       <ul>
         <li v-for="quickResult in quickResults">
           <router-link :to="'/n/' + encodeURIComponent(quickResult.target)">
@@ -194,20 +191,22 @@
   <div class="col-sm-10"> <!-- tabs -->
     <!-- tab headers -->
     <div id="tab-headers">
-      <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item" v-for="openTabHeader in openTabHeaders">
-          <span>
-            <a class="nav-link active" id="home-tab" data-toggle="tab" 
-                href="#home" role="tab" aria-controls="home"
-                aria-selected="true">
-              {{ openTabHeader.name }}
-            </a>
-          </span>
 
-          <span>
-            <a id="home-tab-close" href="#" 
-                @click="closeTab(openTabHeader.path)">X</a>
-          </span>
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <span>
+          <a href="#" alt="Toggle sidebar" @click="showSidebar = !showSidebar"
+             style="font-size: 20px; font-style: bold; padding-right:15px;"> 
+            <span v-if="showSidebar">«</span>
+            <span v-else>»</span>
+          </a>
+        </span>
+        <li class="nav-item" v-for="openTabHeader in openTabHeaders">
+          <button class="close closeTab" type="button" @click="closeTab(openTabHeader)">×</button>
+            <router-link v-bind:class="{'nav-link': true, 'active': openTabPath == openTabHeader}" 
+              :to="'/n/' + encodeURIComponent(openTabHeader)">
+              {{ openTabHeader}}
+            </router-link>
+
         </li>
       </ul> <!-- /tab headers -->
     </div>
@@ -645,11 +644,14 @@
         $('#editor').off('input propertychange', '.*');
         $('#code-editor').off('input propertychange', '.*');
         this.status = ''
+        console.log('from: ', from, 'to: ', to.params.path)
+        this.addNewTabToLS(from.path, to.params.path)
+        this.updateOpenTabPathInLS(to.params.path)
         next()
       }
     },
     created: function() {
-      let self = thi
+      let self = this
       // Comes from prop through $route.
       this.loadPathInEditor(this.path)
 
@@ -671,6 +673,27 @@
 
     },
     methods: {
+      updateOpenTabPathInLS: function(toPath) {
+        localStorage.setItem('openTabPath', toPath)
+      },
+      addNewTabToLS: function(fromPath, toPath) {
+        let openTabPathsStr = localStorage.getItem('openTabPaths', '')
+        let openTabPaths = []
+        // If there is an entry, init the list.
+        if (openTabPathsStr) {
+          openTabPaths = openTabPathsStr.split(',')
+        } else { 
+          // Default init for the LS variable.
+          localStorage.setItem('openTabPaths', '')
+        }
+         
+        if (openTabPaths.includes(toPath)) {
+          return
+        }
+        
+        openTabPaths.push(toPath)
+        localStorage.setItem('openTabPaths', openTabPaths.join(','))
+      },
       saveContent: function(path, updatedContent) {
         let self = this 
         console.log('save content', path, this.$route.params.path)
@@ -692,7 +715,7 @@
 
               response.json().then(function(data) {
                 if  (data.content != updatedContent) {
-                  console.log('saving since content has changed')
+        console.log('saving since content has changed')
                   fetch('/api/update', {
                     method: 'POST',
                     headers: {
@@ -803,7 +826,7 @@
             if (!self.editor) {
               self.editor = editormd('editor', {
                 width: '100%',
-                height: 1080,
+                height: 1280,
                 taskList: (localStorage.settingsTaskLists) ? (localStorage.settingsTaskLists == '1') : false,
                 // autoHeight: true,
                 codeFold: (localStorage.settingsCodeFolding) ? (localStorage.settingsCodeFolding == '1') : false,
@@ -861,7 +884,8 @@
             if (!self.codeEditor) {
               self.codeEditor = editormd('code-editor', {
                 width            : "100%",
-                height           : 1080,
+                height           : 1280,
+                // autoHeight: true,
                 watch            : false,
                 toolbar          : false,
                 codeFold         : true,
@@ -1049,13 +1073,6 @@
       treeData: tree,//treeData
       showSidebar: true,
       rootDirPath: rootDirPath,
-      openTabHeaders: [
-        // TODO(hakanu): Start adding tabs.
-        // {
-        //   name: 'yo',
-        //   path: '/yo/lo',
-        // },
-      ],
       newNodeName: '',
       newNodeParentPath: '',
       query: '',
@@ -1157,6 +1174,18 @@
           backgroundColor: this.settingsSidebarBackgroundColor,
         }
       },
+      openTabHeaders: {
+        cache: false,
+        get() {
+          return (localStorage.getItem('openTabPaths') || '').split(',')
+        }
+      },
+      openTabPath: {
+        cache: false,
+        get() {
+          return (localStorage.getItem('openTabPath') || '')
+        }
+      },
     },
     methods: {
       addItem: function(item) {
@@ -1174,6 +1203,17 @@
       },
       closeTab: function(path) {
         console.log('closing the tab', path)
+        let openTabPaths = (localStorage.getItem('openTabPaths') || '').split(',')
+        let elementIndexToDelete = openTabPaths.indexOf(path)
+        if (elementIndexToDelete == -1) {
+          return
+        }
+
+        openTabPaths.splice(elementIndexToDelete, 1);
+        localStorage.setItem('openTabPaths', openTabPaths.join(','))
+        // Recompute the computed property to reflect the removal to the tabs.
+        // this.$recompute('openTabHeaders')
+        this.$forceUpdate()
       },
       showSettingsModal: function() {
         console.log('show settings modal')
