Add directory browser with breadcrumbs (fixes #94); Add an endpoint to directly serve static files by path #95

--- a/pervane/static/css/styles.css
+++ b/pervane/static/css/styles.css
@@ -66,6 +66,7 @@ body {
 }
 .item {
   cursor: pointer;
+  font-size: 11px;
 }
 .bold {
   font-weight: bold;
@@ -102,4 +103,8 @@ ul ul ul{
   padding: 2px;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.small-text {
+  font-size:10px;
 }
